--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -22,6 +22,7 @@
         gap: 2rem;
 
         .btn-contact {
+            margin-bottom: 1rem;
             display: flex;
             align-items: center;
             justify-content: center;
